add_subdirectory(b_batt0)
add_subdirectory(b_batt1)
add_subdirectory(b_bh10)
add_subdirectory(b_bh25)
add_subdirectory(b_bh100)
add_subdirectory(b_exbox2)
add_subdirectory(b_explob)
add_subdirectory(b_nail0)
add_subdirectory(b_nail1)
add_subdirectory(b_rock0)
add_subdirectory(b_rock1)
add_subdirectory(b_shell0)
add_subdirectory(b_shell1)
add_subdirectory(lq_e0m1)
add_subdirectory(lq_e0m2)
add_subdirectory(lq_e0m3)
add_subdirectory(lq_e0m4)
add_subdirectory(lq_e0m5)
add_subdirectory(lq_e0m6)
add_subdirectory(lq_e0m7)
add_subdirectory(lq_e0m8)
add_subdirectory(start)
